--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
 <head>
-  <title>webcam+</title>
+  <title>Webcam+ - robienie zdjęć w nowym stylu</title>
   <!-- CSS -->
   
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/components/icon.min.css">
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/components/button.min.css">
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/components/reset.min.css">
-  <link rel="stylesheet" href="styles.css">
+  
+  <link rel="stylesheet" href="css/styles.css">
   <!-- jQuery UI CSS -->
-  <link rel="stylesheet" href="jquery-ui.min.css">
+  <link rel="stylesheet" href="jquery/jquery-ui.min.css">
   
   <!-- FAVICON -->
-  <link rel="icon" href="http://zaxad23.github.io/img/logo_16x16.png">
   <link rel="icon" href="http://zaxad23.github.io/img/logo_32x32.png">
   
   <!-- META -->
   <meta charset="utf-8">
-  <meta name="Keywords" content="kamerka,internetowa,kamerka internetowa,zdjęcia,fotki,zdjęcia z kamerki,skorupa">
-  <meta name="Description" content="Fotki to bezpłatne narzędzie do robienia zdjęć z kamerki internetowej bez użycia technologii Adobe Flash! Zrób zdjęcię, edytuj je i pobierz!">
+  <meta name="Keywords" content="kamerka,internetowa,kamerka internetowa,zdjęcia,webcam+,zdjęcia z kamerki,skorupa, stronki skorupy, fotki, webcamplus, edycja zdjęć, edytowanie zdjęć, aparat, aparat online">
+  <meta name="Description" content="Webcam+ to darmowy sposób na nowoczesne zdjęcia. Stworzony z myślą o nowych technologiach HTML5, dzięki czemu może być uruchomiony na dowolnej platformie i każdej nowoczesnej przeglądarce bez technologii Flash i Java!">
   
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" type="text/javascript"></script>
-  <script src="jquery-ui.min.js" type="text/javascript"></script>
+  <script src="jquery/jquery-ui.min.js" type="text/javascript"></script>
   
   <!-- JS -->
-  <script src="engine.js"></script>
-  <script src="setup.js"></script>
+  <script src="js/engine.js"></script>
+  <script src="js/setup.js"></script>
 </head>
 <body>
   <!-- ============ MENU ============= -->
