github link & info

--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
       </div>
       
     </div>
+    <div id="info">
+      <p>Wspierany przez Adama Skorupskiego i innych.</p>
+      <a href="https://github.com/zaxad23/webcamplus" target="_blank">
+        <i class="icon circular github link purple inverted"></i>
+      </a>
+    </div>
   </div>
   
   
@@ -124,7 +130,7 @@
     <div id="screen4" class="screen" style="display:none;">
       <div>
         <h1>Najpierw zrób zdjęcie.</h1>
-        <video id="video" width="auto" height="auto" style="border: 2px solid black" title="Kliknij, aby zrobić natychmiast zdjęcie."></video>
+        <video id="video" style="border: 2px solid black" title="Kliknij, aby zrobić natychmiast zdjęcie."></video>
         <br><br>
         <div class="ui icon button positive circular" id="camera-button">
           <i class="camera icon" id="przyciskAparat"></i>
