--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
   <!--  META  -->
   <meta charset="utf-8"/>
-  <meta name="Keywords" content="kamerka,internetowa,kamerka internetowa,zdjęcia,webcam+,zdjęcia z kamerki,skorupa, stronki skorupy, fotki, webcamplus, edycja zdjęć, edytowanie zdjęć, aparat, aparat online"/>
+  <meta name="Keywords" content="kamerka,internetowa,kamerka internetowa,zdjęcia,webcam+,zdjęcia z kamerki,skorupa, stronki skorupy, fotki, webcamplus, edycja zdjęć, edytowanie zdjęć, aparat, aparat online, webcam"/>
   <meta name="Description" content="Webcam+ to darmowy sposób na nowoczesne zdjęcia. Stworzony z myślą o nowych technologiach HTML5, dzięki czemu może być uruchomiony na dowolnej platformie i każdej nowoczesnej przeglądarce bez technologii Flash i Java!"/>
   
   <!--  jQuery  -->
