--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="pl">
 <head>
   <title>:: Webcam+ :: tworzenie zdjęć w nowym stylu ::</title>
-  <!--  CSS  -->
   
+  <!--  CSS  -->
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/components/icon.min.css"/>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/components/button.min.css"/>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/components/reset.min.css"/>
   
   <link rel="stylesheet" href="css/styles.css"/>
+  
   <!--  jQuery UI CSS  -->
   <link rel="stylesheet" href="jquery/jquery-ui.min.css"/>
   
@@ -68,11 +69,13 @@
           <option value="red">Czerwony</option>
           <option value="pink">Różowy</option>
         </select>
+        <hr>
+        Znak wodny: <input type="checkbox" checked="checked" onclick="zmienznak(this)">
         <br/>
         <br/>
         <br/>
         
-       <div class="center" style="margin-left: auto; margin-right: auto; width: 250px;">
+         <div class="center" style="margin-left: auto; margin-right: auto; width: 250px;">
           <div class="ui button positive icon circular" style="display:inline-block;" onclick="convert()">
             <i class="icon checkmark"></i>
           </div>
@@ -144,6 +147,7 @@
         <h1>Teraz je edytuj.</h1>
         <canvas id="canvas"></canvas>
       </div>
+      <div id="watermarkCount"></div>
     </div>
     <!--  KONIEC  -->
     <div id="screen6" class="screen" style="display:none;">
