--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
   <!--  JS  -->
   <script src="js/engine.js"></script>
   <script src="js/setup.js"></script>
+  
+  <!--[if lte IE 8]>
+  <script type="text/javascript">
+  window.location.href="http://browsehappy.com";
+  </script>
+  <![endif]-->
 </head>
-<body>
+<body>  
   <!--  ============ MENU =============  -->
   <div id="superbar" style="height: 768px;">
     <i id="menuclick" class="icon justify align huge white clickable"></i>
