--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
   <title>:: Webcam+ :: tworzenie zdjęć w nowym stylu ::</title>
   
   <!--  CSS  -->
-  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/components/icon.min.css"/>
-  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/components/button.min.css"/>
-  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.0/components/reset.min.css"/>
+  <link rel="stylesheet" href="semantic-ui/icon.min.css"/>
+  <link rel="stylesheet" href="semantic-ui/button.min.css"/>
+  <link rel="stylesheet" href="semantic-ui/reset.min.css"/>
   
   <link rel="stylesheet" href="css/styles.css"/>
-  
-  <!--  jQuery UI CSS  -->
-  <link rel="stylesheet" href="jquery/jquery-ui.min.css"/>
   
   <!--  FAVICON  -->
   <link rel="icon" href="http://zaxad23.github.io/img/logo_32x32.png"/>
@@ -22,7 +19,7 @@
   <meta name="Description" content="Webcam+ to darmowy sposób na nowoczesne zdjęcia. Stworzony z myślą o nowych technologiach HTML5, dzięki czemu może być uruchomiony na dowolnej platformie i każdej nowoczesnej przeglądarce bez technologii Flash i Java!"/>
   
   <!--  jQuery  -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" type="text/javascript"></script>
+  <script src="jquery/jquery.min.js"></script>
   <script src="jquery/jquery-ui.min.js" type="text/javascript"></script>
   
   <!--  JS  -->
