new backgrounds & last update

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   window.location.href="http://browsehappy.com";
   </script>
   <![endif]-->
+  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>  
   <!--  ============ MENU =============  -->
@@ -91,7 +93,10 @@
       
     </div>
     <div id="info">
-      <p>Wspierany przez Adama Skorupskiego i innych.</p>
+      <p>
+        Ostatnia aktualizacja: <span id="update"></span>
+        Wspierany przez Adama Skorupskiego i innych.
+      </p>
       <a href="https://github.com/zaxad23/webcamplus" target="_blank">
         <i class="icon circular github link purple inverted"></i>
       </a>
