changing pen size

--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
           <option value="pink">Różowy</option>
         </select>
         <hr>
+        Wielkość pisaka: <input type="range" id="size" min="1" max="75" value="5" onchange="penSize=+this.value;">
+        <hr>
         Znak wodny: <input type="checkbox" checked="checked" onclick="zmienznak(this)">
+        
         <br/>
         <br/>
         <br/>
