theme-color meta tag

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link rel="icon" href="http://zaxad23.github.io/img/logo_32x32.png"/>
   
   <!--  META  -->
+  <meta name="theme-color" content="#000000">
+  <meta name="msapplication-TileColor" content="#000000">
   <meta charset="utf-8"/>
   <meta name="Keywords" content="kamerka,internetowa,kamerka internetowa,zdjęcia,webcam+,zdjęcia z kamerki,skorupa, stronki skorupy, fotki, webcamplus, edycja zdjęć, edytowanie zdjęć, aparat, aparat online, webcam"/>
   <meta name="Description" content="Webcam+ to darmowy sposób na nowoczesne zdjęcia. Stworzony z myślą o nowych technologiach HTML5, dzięki czemu może być uruchomiony na dowolnej platformie i każdej nowoczesnej przeglądarce bez technologii Flash i Java!"/>
