--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/styles.css"/>
   
   <!--  FAVICON  -->
-  <link rel="icon" href="http://zaxad23.github.io/img/logo_32x32.png"/>
+  <link rel="icon" href="https://zaxad23.github.io/img/logo_32x32.png"/>
   
   <!--  META  -->
   <meta name="theme-color" content="#000000">
