edit made photo

--- a/index.html
+++ b/index.html
@@ -185,8 +185,11 @@
             </div>
           </div>
         </a>
-        <div class="ui button primary circular icon" id="odswiez" onclick="znowu()">
+        <div class="ui button primary circular icon" id="odswiez" onclick="znowu()" title="Zrób nowe zdjęcie">
           <i class="icon refresh"></i>
+        </div>
+        <div class="ui button secondary circular icon" id="edytuj" onclick="edit()" title="Edytuj jeszcze to zdjęcie">
+          <i class="icon edit"></i>
         </div>
       </div>
     </div>
